assignment 1/code/initial/submission/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Val'", 
                     "'Var'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'Self'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'+.'", 
                     "'==.'", "'!'", "'&&'", "'||'", "':'", "'='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','", 
                     "'.'", "'..'" ]

    symbolicNames = [ "<INVALID>", "BOOLLIT", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", 
                      "IN", "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", 
                      "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "SELF", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "EQ", "NEQ", "GT", "GTE", "LT", "LTE", "SADD", "SEQ", 
                      "NOT", "AND", "OR", "COLON", "ASSIGN", "SCOPE", "LB", 
                      "RB", "LSB", "RSB", "LCB", "RCB", "SM", "CM", "DOT", 
                      "DOUBLE_DOT", "BLOCK_COMMENT", "INTLIT", "FLOATLIT", 
                      "STRLIT", "ZERO", "STATIC_ID", "ID", "WS", "UNCLOSE_STRING", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_exp_LiteralMethod = 1
    RULE_exp_LiteralTerm = 2
    RULE_exp_LiteralAttribure = 3
    RULE_exp_IntFloat = 4
    RULE_exp_0 = 5
    RULE_exp_1 = 6
    RULE_exp_2 = 7
    RULE_exp_3 = 8
    RULE_exp_Logical = 9
    RULE_exp_LogicalTerm = 10
    RULE_exp_LogicalNot = 11
    RULE_exp_LogicalNotTerm = 12
    RULE_exp_Bool = 13
    RULE_exp_Str = 14
    RULE_exp_TermStr = 15
    RULE_exp_EqualAndNotEqual = 16
    RULE_exp_TermEQANEQ = 17
    RULE_exp_LessLargeEqual = 18
    RULE_exp_TermLRE = 19
    RULE_exp_RelationalOperation = 20
    RULE_exp_Idx = 21
    RULE_exp_TermIdx = 22
    RULE_idx_Operators = 23
    RULE_exp_InstanceAttributeAccess = 24
    RULE_exp_InstanceAttributeAccessTerm = 25
    RULE_exp_StaticAttributeAccess = 26
    RULE_exp_InstanceMethodInvocation = 27
    RULE_exp_InstanceMethodInvocationTerm = 28
    RULE_exp_StaticMethodInvocation = 29
    RULE_exp_InstanceAttributeMethod = 30
    RULE_exp_InstanceAttributeMethodTerm = 31
    RULE_exp_IdxFree = 32
    RULE_exp_IdxFreeTerm = 33
    RULE_exp_IdxFreeTermOperator = 34
    RULE_exp_MemberAccess = 35
    RULE_exp_MemberAccessMethod = 36
    RULE_exp_ObjCreation = 37
    RULE_exp_ClassObject = 38
    RULE_expr = 39
    RULE_list_Expr = 40
    RULE_type_Data = 41
    RULE_type_DataArray = 42
    RULE_array_Type = 43
    RULE_seq_ID = 44
    RULE_list_Attribute = 45
    RULE_list_AttributeTerm = 46
    RULE_stmt_AttributeDeclaration = 47
    RULE_lhs = 48
    RULE_stmt_Assign = 49
    RULE_stmt_If = 50
    RULE_stmt_ForIn = 51
    RULE_stmt_Block = 52
    RULE_stmt_MethodInvocation = 53
    RULE_stmt_Continue = 54
    RULE_stmt_Return = 55
    RULE_stmt_Break = 56
    RULE_list_AttributeMethod = 57
    RULE_list_AttributeMethodTerm = 58
    RULE_stmt_MethodVarDeclaration = 59
    RULE_stmt = 60
    RULE_list_Stmt = 61
    RULE_stmt_ClassMethod = 62
    RULE_stmt_ClassDeclaration = 63
    RULE_stmt_MethodDeclaration = 64
    RULE_class_Construction = 65
    RULE_class_Destruction = 66
    RULE_list_Parameters = 67
    RULE_seq_Parameters = 68
    RULE_seq_IDParameters = 69
    RULE_lit_Array = 70
    RULE_lit_Data = 71

    ruleNames =  [ "program", "exp_LiteralMethod", "exp_LiteralTerm", "exp_LiteralAttribure", 
                   "exp_IntFloat", "exp_0", "exp_1", "exp_2", "exp_3", "exp_Logical", 
                   "exp_LogicalTerm", "exp_LogicalNot", "exp_LogicalNotTerm", 
                   "exp_Bool", "exp_Str", "exp_TermStr", "exp_EqualAndNotEqual", 
                   "exp_TermEQANEQ", "exp_LessLargeEqual", "exp_TermLRE", 
                   "exp_RelationalOperation", "exp_Idx", "exp_TermIdx", 
                   "idx_Operators", "exp_InstanceAttributeAccess", "exp_InstanceAttributeAccessTerm", 
                   "exp_StaticAttributeAccess", "exp_InstanceMethodInvocation", 
                   "exp_InstanceMethodInvocationTerm", "exp_StaticMethodInvocation", 
                   "exp_InstanceAttributeMethod", "exp_InstanceAttributeMethodTerm", 
                   "exp_IdxFree", "exp_IdxFreeTerm", "exp_IdxFreeTermOperator", 
                   "exp_MemberAccess", "exp_MemberAccessMethod", "exp_ObjCreation", 
                   "exp_ClassObject", "expr", "list_Expr", "type_Data", 
                   "type_DataArray", "array_Type", "seq_ID", "list_Attribute", 
                   "list_AttributeTerm", "stmt_AttributeDeclaration", "lhs", 
                   "stmt_Assign", "stmt_If", "stmt_ForIn", "stmt_Block", 
                   "stmt_MethodInvocation", "stmt_Continue", "stmt_Return", 
                   "stmt_Break", "list_AttributeMethod", "list_AttributeMethodTerm", 
                   "stmt_MethodVarDeclaration", "stmt", "list_Stmt", "stmt_ClassMethod", 
                   "stmt_ClassDeclaration", "stmt_MethodDeclaration", "class_Construction", 
                   "class_Destruction", "list_Parameters", "seq_Parameters", 
                   "seq_IDParameters", "lit_Array", "lit_Data" ]

    EOF = Token.EOF
    BOOLLIT=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSEIF=5
    ELSE=6
    FOREACH=7
    TRUE=8
    FALSE=9
    ARRAY=10
    IN=11
    INT=12
    FLOAT=13
    BOOLEAN=14
    STRING=15
    RETURN=16
    NULL=17
    CLASS=18
    VAL=19
    VAR=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    NEW=23
    BY=24
    SELF=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    EQ=31
    NEQ=32
    GT=33
    GTE=34
    LT=35
    LTE=36
    SADD=37
    SEQ=38
    NOT=39
    AND=40
    OR=41
    COLON=42
    ASSIGN=43
    SCOPE=44
    LB=45
    RB=46
    LSB=47
    RSB=48
    LCB=49
    RCB=50
    SM=51
    CM=52
    DOT=53
    DOUBLE_DOT=54
    BLOCK_COMMENT=55
    INTLIT=56
    FLOATLIT=57
    STRLIT=58
    ZERO=59
    STATIC_ID=60
    ID=61
    WS=62
    UNCLOSE_STRING=63
    ERROR_CHAR=64
    ILLEGAL_ESCAPE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def stmt_ClassDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Stmt_ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(D96Parser.Stmt_ClassDeclarationContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 144
                self.stmt_ClassDeclaration()
                self.state = 147 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 149
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_LiteralMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_LiteralTerm(self):
            return self.getTypedRuleContext(D96Parser.Exp_LiteralTermContext,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def list_Expr(self):
            return self.getTypedRuleContext(D96Parser.List_ExprContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp_LiteralMethod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_LiteralMethod" ):
                return visitor.visitExp_LiteralMethod(self)
            else:
                return visitor.visitChildren(self)




    def exp_LiteralMethod(self):

        localctx = D96Parser.Exp_LiteralMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp_LiteralMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.exp_LiteralTerm(0)
            self.state = 152
            self.match(D96Parser.DOT)
            self.state = 153
            self.match(D96Parser.ID)
            self.state = 154
            self.match(D96Parser.LB)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.BOOLLIT) | (1 << D96Parser.ARRAY) | (1 << D96Parser.NULL) | (1 << D96Parser.NEW) | (1 << D96Parser.SELF) | (1 << D96Parser.SUB) | (1 << D96Parser.NOT) | (1 << D96Parser.LB) | (1 << D96Parser.INTLIT) | (1 << D96Parser.FLOATLIT) | (1 << D96Parser.STRLIT) | (1 << D96Parser.ZERO) | (1 << D96Parser.ID))) != 0):
                self.state = 155
                self.list_Expr()


            self.state = 158
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_LiteralTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lit_Data(self):
            return self.getTypedRuleContext(D96Parser.Lit_DataContext,0)


        def exp_LiteralTerm(self):
            return self.getTypedRuleContext(D96Parser.Exp_LiteralTermContext,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def list_Expr(self):
            return self.getTypedRuleContext(D96Parser.List_ExprContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp_LiteralTerm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_LiteralTerm" ):
                return visitor.visitExp_LiteralTerm(self)
            else:
                return visitor.visitChildren(self)



    def exp_LiteralTerm(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = D96Parser.Exp_LiteralTermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_exp_LiteralTerm, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.lit_Data()
            self._ctx.stop = self._input.LT(-1)
            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 174
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = D96Parser.Exp_LiteralTermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_LiteralTerm)
                        self.state = 163
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 164
                        self.match(D96Parser.DOT)
                        self.state = 165
                        self.match(D96Parser.ID)
                        self.state = 166
                        self.match(D96Parser.LB)
                        self.state = 168
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.BOOLLIT) | (1 << D96Parser.ARRAY) | (1 << D96Parser.NULL) | (1 << D96Parser.NEW) | (1 << D96Parser.SELF) | (1 << D96Parser.SUB) | (1 << D96Parser.NOT) | (1 << D96Parser.LB) | (1 << D96Parser.INTLIT) | (1 << D96Parser.FLOATLIT) | (1 << D96Parser.STRLIT) | (1 << D96Parser.ZERO) | (1 << D96Parser.ID))) != 0):
                            self.state = 167
                            self.list_Expr()


                        self.state = 170
                        self.match(D96Parser.RB)
                        pass

                    elif la_ == 2:
                        localctx = D96Parser.Exp_LiteralTermContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp_LiteralTerm)
                        self.state = 171
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 172
                        self.match(D96Parser.DOT)
                        self.state = 173
                        self.match(D96Parser.ID)
                        pass

             
                self.state = 178
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Exp_LiteralAttribureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_LiteralTerm(self):
            return self.getTypedRuleContext(D96Parser.Exp_LiteralTermContext,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp_LiteralAttribure

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_LiteralAttribure" ):
                return visitor.visitExp_LiteralAttribure(self)
            else:
                return visitor.visitChildren(self)




    def exp_LiteralAttribure(self):

        localctx = D96Parser.Exp_LiteralAttribureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exp_LiteralAttribure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.exp_LiteralTerm(0)
            self.state = 180
            self.match(D96Parser.DOT)
            self.state = 181
            self.match(D96Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_IntFloatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_0(self):
            return self.getTypedRuleContext(D96Parser.Exp_0Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_exp_IntFloat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_IntFloat" ):
                return visitor.visitExp_IntFloat(self)
            else:
                return visitor.visitChildren(self)




    def exp_IntFloat(self):

        localctx = D96Parser.Exp_IntFloatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exp_IntFloat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.exp_0(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_1(self):
            return self.getTypedRuleContext(D96Parser.Exp_1Context,0)


        def exp_0(self):
            return self.getTypedRuleContext(D96Parser.Exp_0Context,0)


        def ADD(self):
            return self.getToken(D96Parser.ADD, 0)

        def SUB(self):
            return self.getToken(D96Parser.SUB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_exp_0

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_0" ):
                return visitor.visitExp_0(self)
            else:
                return visitor.visitChildren(self)


